# KitchenModeler

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.bat  build.sh  test_kitchen_cad.db-shm  test_kitchen_cad.db-wal  test_kitchen_cad_basic.db-shm  test_kitchen_cad_basic.db-wal
.kiro/specs/kitchen-cad-designer/: design.md  requirements.md  tasks.md
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  CatalogController.cpp  CatalogController.h  DesignController.cpp  DesignController.h  ExportController.cpp  ExportController.h  ProjectController.cpp  ProjectController.h  RenderController.cpp  RenderController.h
src/core/: Camera3D.h  Light.h  Material.h  Shape3D.h
src/geometry/: BoundingBox.h  Geometry.h  GeometryUtils.h  Matrix4x4.h  OCCTShape3D.cpp  OCCTShape3D.h  OpenCascadeGeometryEngine.cpp  OpenCascadeGeometryEngine.h  Point3D.h  Transform3D.h  Vector3D.h
src/interfaces/: ICADExporter.h  IGeometryEngine.h  IProjectRepository.h  IRenderEngine.h  ISceneManager.h  IValidationService.h  Interfaces.h  README.md
src/models/: CatalogItem.cpp  CatalogItem.h  Project.cpp  Project.h
src/persistence/: CatalogRepository.cpp  CatalogRepository.h  DatabaseManager.cpp  DatabaseManager.h  SQLiteProjectRepository.cpp  SQLiteProjectRepository.h
src/scene/: SceneManager.cpp  SceneManager.h
src/services/: BOMGenerator.cpp  BOMGenerator.h  CatalogService.cpp  CatalogService.h  ConfigurationService.cpp  ConfigurationService.h  PricingService.cpp  PricingService.h  ProjectManager.cpp  ProjectManager.h
src/ui/: CatalogPanel.cpp  CatalogPanel.h  DesignCanvas.cpp  DesignCanvas.h  MainWindow.cpp  MainWindow.h  ProjectExplorer.cpp  ProjectExplorer.h  PropertiesPanel.cpp  PropertiesPanel.h
src/utils/: Logger.cpp  Logger.h
src/validation/: CMakeLists.txt  ValidationRules.cpp  ValidationRules.h  ValidationService.cpp  ValidationService.h  ValidationVisualizer.cpp  ValidationVisualizer.h
tests/: CMakeLists.txt  test_geometry.cpp  test_main.cpp  test_models.cpp  test_opencascade_geometry.cpp  test_persistence.cpp  test_persistence_basic.cpp  test_scene_manager.cpp  test_ui_design_canvas.cpp  test_validation.cpp
